--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
             <li class="nav-item"><a href="#services" class="nav-link">Services</a></li>
             <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
+            <li class="nav-item"><a href="https://somesh.authui.site/" class="nav-link">SignUp</a></li>
         </ul>
     </nav>
 
