--- a/index.html
+++ b/index.html
@@ -315,10 +315,9 @@
                 </div>
                 <div class="contact-form">
                     <form action="https://api.web3forms.com/submit" method="POST" id="contactForm">
-                        <!-- Web3Forms Access Key -->
                         <input type="hidden" name="access_key" value="9c4dbdf0-8c38-47a5-aab1-9e3b06b196db">
-
-                        <!-- Honeypot Spam Protection -->
+                        <input type="hidden" name="subject" value="New Contact Form Submission">
+                        <input type="hidden" name="from_name" value="Your Portfolio Website">
                         <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
 
                         <div class="form-group">
@@ -328,13 +327,13 @@
                             <input type="email" name="email" class="form-control" placeholder="Your Email" required>
                         </div>
                         <div class="form-group">
-                            <input type="text" name="subject" class="form-control" placeholder="Subject">
-                        </div>
-                        <div class="form-group">
                             <textarea name="message" class="form-control" placeholder="Your Message" required></textarea>
                         </div>
                         <button type="submit" class="btn submit-btn">
                             <span class="btn-text">Send Message</span>
+                            <span class="success-icon">
+                                <i class="fas fa-check"></i>
+                            </span>
                         </button>
                     </form>
                 </div>
@@ -377,10 +376,6 @@
             loading="lazy"
             referrerpolicy="no-referrer-when-downgrade">
         </iframe>
-    </div>
-
-    <div class="success-checkmark">
-        <div class="check-icon"></div>
     </div>
 
     <script src="js/script.js">
