--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             <li class="nav-item"><a href="#services" class="nav-link">Services</a></li>
             <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
             <li class="nav-item"><a href="profile.html" class="nav-link">SignUp</a></li>
+            <li class="nav-item"><a href="https://www.lpu.in/nest/" class="nav-link">Join LPU</a></li>
         </ul>
     </nav>
 
@@ -185,6 +186,46 @@
         </div>
     </section>
 
+    <section id="education" class="section">
+        <div class="container">
+            <h2 class="section-title">Education</h2>
+            <div class="education-content">
+                <div class="university-info">
+                    <div class="edu-header">
+                        <h3>B.Tech in Computer Science & Engineering</h3>
+                        <span class="university-logo">
+                            <img src="images/lpuposter.png" alt="LPU Logo" class="logo-image">
+                        </span>
+                    </div>
+
+                    <div class="edu-details">
+                        <h4 class="university-name">Lovely Professional University</h4>
+                        <span class="year">2024 - 2028</span>
+
+                        <div class="university-desc">
+                            <p>Pursuing my B.Tech degree at LPU, one of India's largest private universities known for its innovative approach to education and industry integration. LPU is:</p>
+                            <ul class="university-highlights">
+                                <li>NAAC A++ accredited institution</li>
+                                <li>Ranked among Top 50 Universities in India (NIRF Rankings 2023)</li>
+                                <li>200+ acre high-tech campus with world-class infrastructure</li>
+                                <li>Collaborations with 300+ global universities</li>
+                                <li>Strong focus on research and innovation</li>
+                            </ul>
+                        </div>
+
+                        <div class="admission-cta">
+                            <a href="https://www.lpu.in/nest/" class="lpunest-btn">
+                                <span class="btn-text">APPLY FOR LPUNEST</span>
+                                <span class="btn-icon"><i class="fas fa-arrow-right"></i></span>
+                            </a>
+                            <p class="admission-note">After LPUNEST, proceed to the <a href="https://www.lpu.in" target="_blank">official LPU website</a> for admission.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section id="projects" class="section projects">
         <div class="container">
             <h2 class="section-title">Projects</h2>
@@ -209,10 +250,29 @@
                         </div>
                     </div>
                 </div>
-                <!-- Other projects commented out for now
-                <div class="project-card">...</div>
-                <div class="project-card">...</div>
-                -->
+
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="images/project2.png" alt="Project 2" />
+                    </div>
+                    <div class="project-content">
+                        <h3 class="project-title">Tech Forge</h3>
+                        <p class="project-desc">I served as the Tech Head and Lead Developer for TechForge 2025, a prestigious national-level hackathon.
+                        I single-handedly developed the official event website: techforge2025.tech.
+                        My responsibilities included backend integration, frontend UI/UX, and deployment.
+                        TechForge 2025 successfully highlighted emerging technologies and developer talent nationwide.
+</p>
+                        <div class="project-tags">
+                            <span class="project-tag">Front-End Developer</span>
+                            <span class="project-tag">Tech Head</span>
+                            <span class="project-tag">WEBSITE</span>
+                        </div>
+                        <div class="project-links">
+                            <!-- <a href="https://github.com/ei-sanu/cybershield" class="project-link"><i class="fas fa-code"></i> Source Code</a> -->
+                            <a href="https://www.techforge2025.tech/" class="project-link"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -287,8 +347,7 @@
                     </div>
                     <div class="contact-item">
                         <div class="contact-icon">
-                            <i class="fas fa-envelope"></i>
-                        </div>
+                            <i class="fas fa-envelope"></i></div>
                         <div class="contact-text">
                             <h4>Email</h4>
                             <a href="mailto:sanu@example.com">someshranjanbiswal13678@gmail.com</a>
