--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <li class="nav-item"><a href="#services" class="nav-link">Services</a></li>
             <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
             <li class="nav-item"><a href="profile.html" class="nav-link">SignUp</a></li>
-            <li class="nav-item"><a href="https://www.lpu.in/nest/" class="nav-link">Join LPU</a></li>
+            <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
         </ul>
     </nav>
 
