--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                         </div>
                         <div class="project-links">
                             <!-- <a href="https://github.com/ei-sanu/cybershield" class="project-link"><i class="fas fa-code"></i> Source Code</a> -->
-                            <a href="https://www.techforge2025.tech/" class="project-link"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+                            <a href="https://www.techforge2025.tech/" class="project-link"><i class="fas fa-external-link-alt"></i> Live Server</a>
                         </div>
                     </div>
                 </div>
