--- a/index.html
+++ b/index.html
@@ -273,6 +273,44 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="project-card upcoming">
+                    <div class="project-image">
+                        <img src="images/project3.png" alt="Weather App" />
+                        <div class="project-status">
+                            <span class="status-badge">In Development</span>
+                        </div>
+                    </div>
+                    <div class="project-content">
+                        <h3 class="project-title">WeatherSync Pro</h3>
+                        <p class="project-desc">A modern weather application built with React that provides real-time weather updates,
+                        forecasting, and integrated news feed. Features include interactive weather maps, severe weather alerts,
+                        customizable dashboard, and curated news related to climate and local events. The app uses advanced APIs
+                        for accurate weather data and news aggregation.</p>
+                        <div class="project-tags">
+                            <span class="project-tag">React Dev</span>
+                            <span class="project-tag">Real Time </span>
+                            <span class="project-tag">Weather</span>
+                            <span class="project-tag">News</span>
+                        </div>
+                        <div class="project-features">
+                            <div class="feature-item">
+                                <i class="fas fa-cloud"></i>
+                                <span>Real-time Weather</span>
+                            </div>
+                            <div class="feature-item">
+                                <i class="fas fa-newspaper"></i>
+                                <span>News Integration</span>
+                            </div>
+                        </div>
+                        <div class="progress-section">
+                            <div class="progress-bar">
+                                <div class="progress" style="width: 75%"></div>
+                            </div>
+                            <span class="progress-text">75% Complete</span>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
