--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" type="image/x-icon" href="images/Sanu.jpg">
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2507559388753222"
+    crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- Add Loader -->
