--- a/auth.html
+++ b/auth.html
@@ -73,6 +73,9 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h2><i class="fas fa-gavel"></i> Terms & Conditions</h2>
+                <button class="close-btn" onclick="closeModal('termsModal')" aria-label="Close">
+                    <i class="fas fa-times"></i>
+                </button>
             </div>
             <div class="terms-text">
                 <h3>Copyright Notice</h3>
@@ -87,11 +90,6 @@
                     <li>Monetary damages up to ₹2,00,000</li>
                     <li>Imprisonment up to 3 years</li>
                 </ul>
-                <div class="modal-footer">
-                    <button class="close-btn" onclick="closeModal('termsModal')">
-                        Close <i class="fas fa-times"></i>
-                    </button>
-                </div>
             </div>
         </div>
     </div>
@@ -122,12 +120,12 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-text">
-                © 2025 somesh.social. All rights reserved.
+                © 2025 Somesh. All rights reserved.
             </div>
             <div class="social-links">
-                <a href="https://www.linkedin.com/in/somesh-biswal-b73576320?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="https://github.com/ei-sanu" target="_blank"><i class="fab fa-github"></i></a>
-                <a href="https://x.com/SomeshR82674271" target="_blank"><i class="fab fa-twitter"></i></a>
+                <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="#" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
             </div>
         </div>
     </footer>
