--- a/projects.html
+++ b/projects.html
@@ -67,7 +67,7 @@
             <p class="page-subtitle">Exploring the intersection of security and innovation</p>
 
             <div class="projects-grid">
-                
+
 <section id="projects" class="section projects">
 <div class="container">
 <h2 class="section-title">Projects</h2>
@@ -116,22 +116,22 @@
         </div>
     </div>
 
-    <div class="project-card upcoming">
+    <div class="project-card">
         <div class="project-image">
             <img src="images/project3.png" alt="Weather App" />
             <div class="project-status">
-                <span class="status-badge">In Development</span>
+                <span class="status-badge success">Published</span>
             </div>
         </div>
         <div class="project-content">
-            <h3 class="project-title">WeatherSync Pro</h3>
+            <h3 class="project-title">WeatherCast</h3>
             <p class="project-desc">A modern weather application built with React that provides real-time weather updates,
             forecasting, and integrated news feed. Features include interactive weather maps, severe weather alerts,
             customizable dashboard, and curated news related to climate and local events. The app uses advanced APIs
             for accurate weather data and news aggregation.</p>
             <div class="project-tags">
                 <span class="project-tag">React Dev</span>
-                <span class="project-tag">Real Time </span>
+                <span class="project-tag">Real Time</span>
                 <span class="project-tag">Weather</span>
                 <span class="project-tag">News</span>
             </div>
@@ -145,11 +145,13 @@
                     <span>News Integration</span>
                 </div>
             </div>
-            <div class="progress-section">
-                <div class="progress-bar">
-                    <div class="progress" style="width: 75%"></div>
-                </div>
-                <span class="progress-text">75% Complete</span>
+            <div class="project-links">
+                <a href="https://github.com/ei-sanu/caster" class="project-link">
+                    <i class="fas fa-code"></i> Source Code
+                </a>
+                <a href="https://urcaster.netlify.app/" class="project-link">
+                    <i class="fas fa-external-link-alt"></i> Live Demo
+                </a>
             </div>
         </div>
     </div>
